Inconsistent object data behavior when link-duplicating collections. #90638

Closed
opened 2021-08-12 20:00:29 +02:00 by Raimon Guarro · 9 comments

System Information
Operating system: Linux-5.10.0-2-amd64-x86_64-with-glibc2.31 64 Bits
Graphics card: GeForce RTX 2080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.91.03

Blender Version
Broken: version: 2.93.2, branch: master, commit date: 2021-08-03 05:58, hash: 1eb06de260
Worked: 2.83.3

Short description of error
Duplicating collections in Linked mode doesn't maintain camera object data, but duplicates it. Seems to work as expected for other object types.

Exact steps for others to reproduce the error

  1. Start a new default startup file
  2. Go to Outliner. Right click over the default collection, named "Collection", and choose Duplicate Linked in the menu.
  3. Inspect object data inside the hyerarchy tree of the duplicate collection: camera data is duplicated (Camera.001) while others (Cube and Lamp) stay the same as expected.

Not sure if this is a bug or works as intended, but seems counterintuitive to my understanding on how data blocks work.

Thanks for your attention!
Raimon

**System Information** Operating system: Linux-5.10.0-2-amd64-x86_64-with-glibc2.31 64 Bits Graphics card: GeForce RTX 2080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.91.03 **Blender Version** Broken: version: 2.93.2, branch: master, commit date: 2021-08-03 05:58, hash: `1eb06de260` Worked: 2.83.3 **Short description of error** Duplicating collections in Linked mode doesn't maintain camera object data, but duplicates it. Seems to work as expected for other object types. **Exact steps for others to reproduce the error** 1. Start a new default startup file 2. Go to Outliner. Right click over the default collection, named "Collection", and choose Duplicate Linked in the menu. 3. Inspect object data inside the hyerarchy tree of the duplicate collection: camera data is duplicated (Camera.001) while others (Cube and Lamp) stay the same as expected. Not sure if this is a bug or works as intended, but seems counterintuitive to my understanding on how data blocks work. Thanks for your attention! Raimon
Author

Added subscriber: @RaimonGuarroiNogues

Added subscriber: @RaimonGuarroiNogues
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2021-08-13 11:48:02 +02:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, will check.

Can confirm, will check.
Philipp Oeser removed their assignment 2021-10-22 11:24:28 +02:00
Member

Added subscriber: @mont29

Added subscriber: @mont29
Member

Will step down due to time constraints, think this goes much more quickly if @mont29 handles this

Will step down due to time constraints, think this goes much more quickly if @mont29 handles this

This issue was referenced by 65dbeb1d81

This issue was referenced by 65dbeb1d81bff6c5742eb5f503b59207485041a9

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2021-10-22 12:35:56 +02:00

This comment was removed by @mont29

*This comment was removed by @mont29*
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90638
No description provided.